# evo-mariners

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  coevolve.dev.py  coevolve.py  getting_started.cpp  run_baseline.py  simple_evo.cpp  simple_evo.py  sort_csv.py  team_trim_csv.py  trim_csv.py
apptainer/: README.md  build_image.sh  sbatch_build_apptainer.sh  ubuntu_20.04_ivp_2680_learn.def
docker/2680_image/: Dockerfile  README.md
docker/base_moos_ivp_image/: Dockerfile  README.md
docker/learn_image/: Dockerfile  README.md
examples/: 12core-config.yaml  24core-config.yaml  ccea-config.yaml  config.yaml
notebooks/: check_abe_filt.ipynb  plot_results.ipynb
scripts/: append-log.sh  apptainer.txt  blue-to-red.sh  build-overlay-template.sh  get-nets.sh  green-edges.sh  hpc_vscode_alloc.sh  hpc_vscode_alloc2.sh  launch-apptainer.sh  print-hashes  rem-blue.sh  rem-poly.sh  remove-cbf-circles.sh  remove-cbfs-eve.sh  remove-cbfs.sh  remove-psector.sh  request-resources.sh  run-container.sh  sbatch_run_ccea.sh  sbatch_run_python.sh  sbatch_run_simple_evo.sh  start-lima-dev.sh  start-vscode-tunnel.sh  start_vscode_tunnel.sh  untar-everything.sh
scripts/deprecated/: sbatch_run_ccea_dev.sh
scripts/one-off/: central_log.py  check_timestamps.sh  find_bad_abe_positions_filtered.sh  sbatch_tar_influence_shaping.sh
